@@ -10,6 +10,8 @@ confparser.c \
 confparser.h \
 dir.c \
 dir.h \
+ipc.c \
+ipc.h \
 module.c \
 modulep.h \
 protocol.c \
